--- a/index.html
+++ b/index.html
@@ -1,1 +1,31 @@
-B
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Bijeli Blok</title>
+    <style>
+body {
+  margin: 0;
+  padding: 0;
+  text-align: center; /* Centers inline elements like <img> */
+}
+
+.top-image {
+  display: block;
+  margin: 0 auto;         /* Centers image horizontally */
+  width: 100%;            /* Let it scale responsively */
+  max-width: 600px;       /* Optional: set a max width for large screens */
+  height: auto;           /* Maintain aspect ratio */
+}
+    </style>
+    <link rel="icon" href="./favicon.ico" type="image/x-icon">
+  </head>
+  <body>
+    <main>
+        <img src="https://res.cloudinary.com/niknet/image/upload/v1760737640/image_ldcves.png" alt="Bijeli Blok Logo" class="top-image">
+    </main>
+    <script src="index.js"></script>
+  </body>
+</html>
