--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@ body {
   margin: 0;
   padding: 0;
   text-align: center; /* Centers inline elements like <img> */
+  background-color: black; /* Set background to black */
 }
 
 .top-image {
